Kaggle Notebook | Python Learning | Version 14

--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "140d9e0c",
+   "id": "6d6b7c56",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:51.787197Z",
-     "iopub.status.busy": "2025-10-26T01:14:51.786776Z",
-     "iopub.status.idle": "2025-10-26T01:14:53.843425Z",
-     "shell.execute_reply": "2025-10-26T01:14:53.842225Z"
+     "iopub.execute_input": "2025-12-08T18:54:33.076550Z",
+     "iopub.status.busy": "2025-12-08T18:54:33.076221Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.127403Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.126613Z"
     },
     "papermill": {
-     "duration": 2.064107,
-     "end_time": "2025-10-26T01:14:53.845346",
+     "duration": 2.058283,
+     "end_time": "2025-12-08T18:54:35.129048",
      "exception": false,
-     "start_time": "2025-10-26T01:14:51.781239",
+     "start_time": "2025-12-08T18:54:33.070765",
      "status": "completed"
     },
     "tags": []
@@ -30,7 +30,9 @@
     "\n",
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "\n",
+    "import pytest\n",
+    "import logging\n",
+    "#from typing import list\n",
     "# Input data files are available in the read-only \"../input/\" directory\n",
     "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
     "\n",
@@ -46,19 +48,53 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5cda7e5d",
+   "id": "53661ef5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:53.853667Z",
-     "iopub.status.busy": "2025-10-26T01:14:53.853276Z",
-     "iopub.status.idle": "2025-10-26T01:14:53.862507Z",
-     "shell.execute_reply": "2025-10-26T01:14:53.861270Z"
+     "iopub.execute_input": "2025-12-08T18:54:35.138375Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.137425Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.142874Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.142004Z"
     },
     "papermill": {
-     "duration": 0.01524,
-     "end_time": "2025-10-26T01:14:53.864132",
+     "duration": 0.011401,
+     "end_time": "2025-12-08T18:54:35.144363",
      "exception": false,
-     "start_time": "2025-10-26T01:14:53.848892",
+     "start_time": "2025-12-08T18:54:35.132962",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# log level : debug - 1, info - 2, warning -3 (default) , error -4 , critical -5\n",
+    "\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.INFO)\n",
+    "#-------- Console Handler -------------\n",
+    "console_handler = logging.StreamHandler()\n",
+    "console_handler.setLevel(logging.INFO)\n",
+    "console_format = logging.Formatter(\"%(asctime)s | %(levelname)s | %(name)s | %(message)s\")\n",
+    "console_handler.setFormatter(console_format)\n",
+    "logger.addHandler(console_handler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "165814bb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-08T18:54:35.153045Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.152747Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.160677Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.159682Z"
+    },
+    "papermill": {
+     "duration": 0.013904,
+     "end_time": "2025-12-08T18:54:35.161953",
+     "exception": false,
+     "start_time": "2025-12-08T18:54:35.148049",
      "status": "completed"
     },
     "tags": []
@@ -132,20 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b0457eed",
+   "execution_count": 4,
+   "id": "0438cd53",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:53.872222Z",
-     "iopub.status.busy": "2025-10-26T01:14:53.871872Z",
-     "iopub.status.idle": "2025-10-26T01:14:53.880353Z",
-     "shell.execute_reply": "2025-10-26T01:14:53.879021Z"
+     "iopub.execute_input": "2025-12-08T18:54:35.170739Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.170129Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.177842Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.176911Z"
     },
     "papermill": {
-     "duration": 0.014396,
-     "end_time": "2025-10-26T01:14:53.881902",
+     "duration": 0.013566,
+     "end_time": "2025-12-08T18:54:35.179223",
      "exception": false,
-     "start_time": "2025-10-26T01:14:53.867506",
+     "start_time": "2025-12-08T18:54:35.165657",
      "status": "completed"
     },
     "tags": []
@@ -216,20 +252,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a1efa319",
+   "execution_count": 5,
+   "id": "d8d697b3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:53.891995Z",
-     "iopub.status.busy": "2025-10-26T01:14:53.891670Z",
-     "iopub.status.idle": "2025-10-26T01:14:53.902314Z",
-     "shell.execute_reply": "2025-10-26T01:14:53.901065Z"
+     "iopub.execute_input": "2025-12-08T18:54:35.188525Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.187968Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.197496Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.196661Z"
     },
     "papermill": {
-     "duration": 0.018711,
-     "end_time": "2025-10-26T01:14:53.904187",
+     "duration": 0.015777,
+     "end_time": "2025-12-08T18:54:35.198756",
      "exception": false,
-     "start_time": "2025-10-26T01:14:53.885476",
+     "start_time": "2025-12-08T18:54:35.182979",
      "status": "completed"
     },
     "tags": []
@@ -326,20 +362,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7b2e593c",
+   "execution_count": 6,
+   "id": "f421f125",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:53.912460Z",
-     "iopub.status.busy": "2025-10-26T01:14:53.912117Z",
-     "iopub.status.idle": "2025-10-26T01:14:53.920586Z",
-     "shell.execute_reply": "2025-10-26T01:14:53.919628Z"
+     "iopub.execute_input": "2025-12-08T18:54:35.207972Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.207174Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.214007Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.213135Z"
     },
     "papermill": {
-     "duration": 0.014311,
-     "end_time": "2025-10-26T01:14:53.922130",
+     "duration": 0.01267,
+     "end_time": "2025-12-08T18:54:35.215308",
      "exception": false,
-     "start_time": "2025-10-26T01:14:53.907819",
+     "start_time": "2025-12-08T18:54:35.202638",
      "status": "completed"
     },
     "tags": []
@@ -396,20 +432,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0471d9e2",
+   "execution_count": 7,
+   "id": "142fa23f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:53.930749Z",
-     "iopub.status.busy": "2025-10-26T01:14:53.930068Z",
-     "iopub.status.idle": "2025-10-26T01:14:53.938342Z",
-     "shell.execute_reply": "2025-10-26T01:14:53.936838Z"
+     "iopub.execute_input": "2025-12-08T18:54:35.225554Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.224670Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.231718Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.230683Z"
     },
     "papermill": {
-     "duration": 0.014363,
-     "end_time": "2025-10-26T01:14:53.939977",
+     "duration": 0.013387,
+     "end_time": "2025-12-08T18:54:35.233081",
      "exception": false,
-     "start_time": "2025-10-26T01:14:53.925614",
+     "start_time": "2025-12-08T18:54:35.219694",
      "status": "completed"
     },
     "tags": []
@@ -465,20 +501,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d2396868",
+   "execution_count": 8,
+   "id": "c46b68f5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:53.948473Z",
-     "iopub.status.busy": "2025-10-26T01:14:53.948132Z",
-     "iopub.status.idle": "2025-10-26T01:14:53.956619Z",
-     "shell.execute_reply": "2025-10-26T01:14:53.955514Z"
+     "iopub.execute_input": "2025-12-08T18:54:35.242610Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.241730Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.249759Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.248901Z"
     },
     "papermill": {
-     "duration": 0.015019,
-     "end_time": "2025-10-26T01:14:53.958509",
+     "duration": 0.013899,
+     "end_time": "2025-12-08T18:54:35.250917",
      "exception": false,
-     "start_time": "2025-10-26T01:14:53.943490",
+     "start_time": "2025-12-08T18:54:35.237018",
      "status": "completed"
     },
     "tags": []
@@ -541,20 +577,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1d911e38",
+   "execution_count": 9,
+   "id": "6c536762",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:53.967100Z",
-     "iopub.status.busy": "2025-10-26T01:14:53.966738Z",
-     "iopub.status.idle": "2025-10-26T01:14:53.979461Z",
-     "shell.execute_reply": "2025-10-26T01:14:53.978103Z"
+     "iopub.execute_input": "2025-12-08T18:54:35.260357Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.260047Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.270561Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.269610Z"
     },
     "papermill": {
-     "duration": 0.018951,
-     "end_time": "2025-10-26T01:14:53.981107",
+     "duration": 0.016924,
+     "end_time": "2025-12-08T18:54:35.271856",
      "exception": false,
-     "start_time": "2025-10-26T01:14:53.962156",
+     "start_time": "2025-12-08T18:54:35.254932",
      "status": "completed"
     },
     "tags": []
@@ -664,20 +700,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a66aac51",
+   "execution_count": 10,
+   "id": "d5d8953b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:53.990257Z",
-     "iopub.status.busy": "2025-10-26T01:14:53.989308Z",
-     "iopub.status.idle": "2025-10-26T01:14:53.996740Z",
-     "shell.execute_reply": "2025-10-26T01:14:53.995532Z"
+     "iopub.execute_input": "2025-12-08T18:54:35.281299Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.280500Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.287133Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.286262Z"
     },
     "papermill": {
-     "duration": 0.013794,
-     "end_time": "2025-10-26T01:14:53.998473",
+     "duration": 0.012741,
+     "end_time": "2025-12-08T18:54:35.288484",
      "exception": false,
-     "start_time": "2025-10-26T01:14:53.984679",
+     "start_time": "2025-12-08T18:54:35.275743",
      "status": "completed"
     },
     "tags": []
@@ -710,20 +746,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e80684f6",
+   "execution_count": 11,
+   "id": "82c047b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:54.007034Z",
-     "iopub.status.busy": "2025-10-26T01:14:54.006724Z",
-     "iopub.status.idle": "2025-10-26T01:14:54.019649Z",
-     "shell.execute_reply": "2025-10-26T01:14:54.018221Z"
+     "iopub.execute_input": "2025-12-08T18:54:35.298315Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.297860Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.309022Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.308075Z"
     },
     "papermill": {
-     "duration": 0.019192,
-     "end_time": "2025-10-26T01:14:54.021362",
+     "duration": 0.017857,
+     "end_time": "2025-12-08T18:54:35.310460",
      "exception": false,
-     "start_time": "2025-10-26T01:14:54.002170",
+     "start_time": "2025-12-08T18:54:35.292603",
      "status": "completed"
     },
     "tags": []
@@ -820,20 +856,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4e57baa7",
+   "execution_count": 12,
+   "id": "d16ca6a6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T01:14:54.030190Z",
-     "iopub.status.busy": "2025-10-26T01:14:54.029819Z",
-     "iopub.status.idle": "2025-10-26T01:14:54.042644Z",
-     "shell.execute_reply": "2025-10-26T01:14:54.041591Z"
+     "iopub.execute_input": "2025-12-08T18:54:35.319716Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.319443Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.331635Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.330653Z"
     },
     "papermill": {
-     "duration": 0.019196,
-     "end_time": "2025-10-26T01:14:54.044313",
+     "duration": 0.018438,
+     "end_time": "2025-12-08T18:54:35.332996",
      "exception": false,
-     "start_time": "2025-10-26T01:14:54.025117",
+     "start_time": "2025-12-08T18:54:35.314558",
      "status": "completed"
     },
     "tags": []
@@ -936,6 +972,169 @@
     "    print(company.get_total_salary())\n",
     "    print(company.get_employees_by_department(\"Engineering\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dc276cea",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-08T18:54:35.342725Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.341956Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.348112Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.347224Z"
+    },
+    "papermill": {
+     "duration": 0.012373,
+     "end_time": "2025-12-08T18:54:35.349470",
+     "exception": false,
+     "start_time": "2025-12-08T18:54:35.337097",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing binary_search.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile binary_search.py\n",
+    "class BinarySearch():\n",
+    "    ''' Binary Search'''\n",
+    "    def __init__(self) -> None:\n",
+    "        pass\n",
+    "        \n",
+    "    def binary_search(self,element :float,list1:list[float]) -> int:\n",
+    "        if list1 == [] :\n",
+    "            return False\n",
+    "        middle = len(list1)//2\n",
+    "        if (element == list1[middle]):\n",
+    "            return True\n",
+    "        elif (element > list1[middle]):\n",
+    "            return self.binary_search(element,list1[middle+1:])\n",
+    "        else :\n",
+    "            return self.binary_search(element,list1[:middle])\n",
+    "\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     list1 = [] #[1,2,3,4,5,6,7]\n",
+    "#     element = 9\n",
+    "#     b_found = BinarySearch()\n",
+    "#     try :\n",
+    "#         if len(list1)> 0:\n",
+    "#             b_bool = b_found.binary_search(element,list1)\n",
+    "#             #print(f\"element fouund  : {b_bool}\")\n",
+    "#             logger.info(f\"element fouund  : {b_bool}\")\n",
+    "#         else :\n",
+    "#             raise Exception\n",
+    "#     except Exception as e :\n",
+    "#         logger.error(f\"there is any error in input details : {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ad970d5e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-08T18:54:35.359267Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.358634Z",
+     "iopub.status.idle": "2025-12-08T18:54:35.364440Z",
+     "shell.execute_reply": "2025-12-08T18:54:35.363401Z"
+    },
+    "papermill": {
+     "duration": 0.0122,
+     "end_time": "2025-12-08T18:54:35.365815",
+     "exception": false,
+     "start_time": "2025-12-08T18:54:35.353615",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing test_binary_search.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile test_binary_search.py\n",
+    "import pytest\n",
+    "from binary_search import BinarySearch\n",
+    "b_found = BinarySearch()\n",
+    "\n",
+    "@pytest.fixture\n",
+    "def data_list1():\n",
+    "    list1 = [1,2,3,4,5,6,7]\n",
+    "    element1 = 7\n",
+    "    return (element1,list1)\n",
+    "    \n",
+    "def test_scenario1(data_list1):\n",
+    "    element1,list1 = data_list1\n",
+    "    result = b_found.binary_search(element1,list1)\n",
+    "    assert result == True\n",
+    "\n",
+    "@pytest.fixture\n",
+    "def data_list2():\n",
+    "    list2 = [1,2,3,4,5,6,7]\n",
+    "    element2 = 9\n",
+    "    return (element2,list2)\n",
+    "    \n",
+    "def test_scenario2(data_list2):\n",
+    "    element2,list2 = data_list2\n",
+    "    result = b_found.binary_search(element2,list2)\n",
+    "    assert result == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e45cc7ae",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-08T18:54:35.375337Z",
+     "iopub.status.busy": "2025-12-08T18:54:35.375015Z",
+     "iopub.status.idle": "2025-12-08T18:54:37.480814Z",
+     "shell.execute_reply": "2025-12-08T18:54:37.479731Z"
+    },
+    "papermill": {
+     "duration": 2.113049,
+     "end_time": "2025-12-08T18:54:37.483062",
+     "exception": false,
+     "start_time": "2025-12-08T18:54:35.370013",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.11.13, pytest-8.4.1, pluggy-1.6.0 -- /usr/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /kaggle/working\r\n",
+      "plugins: anyio-4.11.0, typeguard-4.4.4, langsmith-0.4.8\r\n",
+      "collected 2 items                                                              \u001b[0m\r\n",
+      "\r\n",
+      "test_binary_search.py::test_scenario1 \u001b[32mPASSED\u001b[0m\u001b[32m                             [ 50%]\u001b[0m\r\n",
+      "test_binary_search.py::test_scenario2 \u001b[32mPASSED\u001b[0m\u001b[32m                             [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[32m ===============================\u001b[0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pytest test_binary_search.py -v"
+   ]
   }
  ],
  "metadata": {
@@ -967,14 +1166,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7.872674,
-   "end_time": "2025-10-26T01:14:54.568627",
+   "duration": 9.529212,
+   "end_time": "2025-12-08T18:54:38.007048",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-26T01:14:46.695953",
+   "start_time": "2025-12-08T18:54:28.477836",
    "version": "2.6.0"
   }
  },
